fix: disable hover on mobile

--- a/CSS/_base.scss
+++ b/CSS/_base.scss
@@ -271,13 +271,21 @@ header {
   margin-right: 20px;
   cursor: pointer;
 
-  &.active,
-  &:hover {
+  &.active {
     width: 12px;
     height: 12px;
     opacity: 1;
     margin-right: 14px;
     border-radius: 6px;
+  }
+  &:hover {
+    @media (hover: hover) {
+      width: 12px;
+      height: 12px;
+      opacity: 1;
+      margin-right: 14px;
+      border-radius: 6px;
+    }
   }
 }
 
