--- a/CSS/site.css
+++ b/CSS/site.css
@@ -670,12 +670,22 @@ header .search-block:hover .cancel {
   cursor: pointer;
 }
 
-.photo-page.active, .photo-page:hover {
+.photo-page.active {
   width: 12px;
   height: 12px;
   opacity: 1;
   margin-right: 14px;
   border-radius: 6px;
+}
+
+@media (hover: hover) {
+  .photo-page:hover {
+    width: 12px;
+    height: 12px;
+    opacity: 1;
+    margin-right: 14px;
+    border-radius: 6px;
+  }
 }
 
 .photo-page:last-child {
